--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,35 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_maze"
+        android:id="@+id/button_maze_screen"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:onClick="startMazeActivity"
-        android:text="@string/main_maze_button"
         android:enabled="false"
-        app:layout_constraintBottom_toTopOf="@+id/button_camera"
+        android:onClick="startMazeActivityScreen"
+        android:text="Maze (screen)"
+        app:layout_constraintBottom_toTopOf="@+id/button_maze_fingerprint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="spread" />
+
+    <Button
+        android:id="@+id/button_maze_fingerprint"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:enabled="false"
+        android:onClick="startMazeActivityFingerprint"
+        android:text="Maze (Fingerprint)"
+        app:layout_constraintBottom_toTopOf="@+id/button_camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_maze_screen" />
 
     <Button
         android:id="@+id/button_camera"
@@ -34,7 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button_typing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_maze" />
+        app:layout_constraintTop_toBottomOf="@+id/button_maze_fingerprint" />
 
     <Button
         android:id="@+id/button_typing"
