--- a/app/src/main/res/layout/activity_typing.xml
+++ b/app/src/main/res/layout/activity_typing.xml
@@ -35,14 +35,26 @@
         app:layout_constraintTop_toBottomOf="@+id/mistyped_word" />
 
     <TextView
-        android:id="@+id/Information"
+        android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
-        android:text="Fix the type in the following word"
+        android:text="Fix the typo in the following word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/usage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="using the screen!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info" />
 </android.support.constraint.ConstraintLayout>
