--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_maze_fingerprint"/>
 
+    <TextView
+        android:id="@+id/nrHint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/button_save_subject_number"
+        app:layout_constraintTop_toBottomOf="@+id/button_save_subject_number" />
+
     <!--
 
     <Button
