--- a/app/src/main/res/layout/activity_ddr.xml
+++ b/app/src/main/res/layout/activity_ddr.xml
@@ -19,4 +19,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/graphic_arrow_up" />
 
+    <TextView
+        android:id="@+id/bestTimeText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Best time: 0s"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/previousTimeText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Previous time:  0s"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bestTimeText" />
+
 </android.support.constraint.ConstraintLayout>
