--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,16 @@
         app:layout_constraintStart_toStartOf="@+id/button_save_subject_number"
         app:layout_constraintTop_toBottomOf="@+id/button_save_subject_number" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="startDDRScrollActivity"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@+id/nrHint"
+        tools:layout_editor_absoluteX="25dp" />
+
     <!--
 
     <Button
