--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:onClick="startDDRScrollActivity"
-        android:text="Button"
+        android:text="Shortcut to ddr_scroll"
         app:layout_constraintTop_toBottomOf="@+id/nrHint"
         tools:layout_editor_absoluteX="25dp" />
 
