--- a/app/src/main/res/layout/activity_maze.xml
+++ b/app/src/main/res/layout/activity_maze.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MazeActivity">
+    tools:context=".MazeActivity"
+    android:keepScreenOn="true">
 
     <ImageView
         android:id="@+id/maze_imageviewer"
