--- a/app/src/main/res/layout/activity_ddr.xml
+++ b/app/src/main/res/layout/activity_ddr.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DDRActivity">
+    tools:context=".DDRActivity"
+    android:keepScreenOn="true">
 
     <ImageView
         android:id="@+id/arrow_up"
