--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:text="New subject"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_maze_fingerprint"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <TextView
         android:id="@+id/nrHint"
@@ -89,6 +89,26 @@
         app:layout_constraintStart_toStartOf="@+id/button_save_subject_number"
         app:layout_constraintTop_toBottomOf="@+id/button_save_subject_number" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:entries='@array/phones'
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/button_maze_fingerprint" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Phone:"
+        app:layout_constraintStart_toStartOf="@+id/button_maze_fingerprint"
+        app:layout_constraintTop_toBottomOf="@+id/button_maze_fingerprint" />
+    <!--
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
@@ -98,7 +118,7 @@
         android:text="Shortcut to ddr_scroll"
         app:layout_constraintTop_toBottomOf="@+id/nrHint"
         tools:layout_editor_absoluteX="25dp" />
-
+-->
     <!--
 
     <Button
